启动预热百倍提速;Zoom 边界前置短路过滤;客户端中断异常优雅降级